avoid the layout shift due to the appearance of the scrollbar on scrollable pages

--- a/src/popup/components/Body.module.css
+++ b/src/popup/components/Body.module.css
@@ -1,6 +1,7 @@
 .body {
   position: relative;
-  padding: var(--size-3);
+  padding: var(--size-3) 0 var(--size-3) var(--size-3);
   block-size: calc(100% - var(--header-size));
   overflow-block: auto;
+  scrollbar-gutter: stable;
 }
